# ojpoker

./: .editorconfig  .gitignore  README.md  build_docs_all.ts  clean_build_all.ts  test_all.ts
.github/workflows/: rust.yaml
cards/: build_cards.ts  decoration_as.ts  face_js.ts  face_kc.ts  face_kd.ts  face_kh.ts  face_ks.ts  face_qh.ts  face_qs.ts
dart/: .gitignore  cards.md  dartdoc_options.yaml  poker.md  pubspec.yaml  utilities.md
dart/lib/: card.dart  deck_hand.dart  master_deck.dart  masterdeck.dart  onejoker.dart  stack.dart  troolean.dart  utils.dart
dart/test/: card_test.dart  deck_hand_test.dart  deck_test.dart  hand_test.dart  hash_test.dart  high_hand_test.dart  master_deck_test.dart  poker_eval_test.dart  rank_test.dart  stack_test.dart  suit_rank_test.dart  suit_test.dart  util_test.dart
data/: .gitignore  build_hands_text_data.ts  build_master_deck_code.ts  deno.jsonc  pack_all.ts  pack_hands_text.ts  pack_hash_tests.ts  pack_high_hand_tables.ts  pack_master_decks.ts  pack_poker_hands.ts  packall.sh  packall.ts
data/cards/: README.md  build_cards.ts  decoration_as.ts  face_jb.ts  face_jc.ts  face_jd.ts  face_jh.ts  face_jk.ts  face_js.ts  face_jw.ts  face_qc.ts  face_qd.ts  faces_jk.ts  ranks.ts  suits.ts
data/json/: hands_text.json5  hash_tests.json5  master_decks.json5  master_decks.jsonc  poker_hands_100k.jsonc  poker_hands_100k_eval.json5  random_hands_100k.jsonc  seven_card_hands_100k.jsonc
data/releases/: README.md
deno/: deno.jsonc
deno/rs_lib/: Cargo.toml
deno/ts/: card.ts  cards.ts  rank.ts  suit.ts
docs/: .nojekyll  README.md  dart  index.html  rust
docs/css/: styles.css
python/: Cargo.toml  pyproject.toml
rust/: .gitignore  Cargo.toml
rust/doc/: cards_module.md  header.html  onejoker_crate.md  poker_module.md  utils_module.md
rust/examples/: basic.rs  kct1.rs
rust/src/: error.rs  errors.rs  lib.rs  main.rs  prelude.rs  rand.rs  utils.rs
rust/src/cards/: card.rs  card_parse.rs  deck.rs  deck_hand.rs  deck_type.rs  hand.rs  hashes.rs  master_deck.rs  masterdeck.rs  mod.rs  rank.rs  stack.rs  suit.rs  utils.rs
rust/src/poker/: ace_to_five.rs  ace_to_six.rs  action_razz.rs  badugi.rs  bug.rs  deuce_to_seven.rs  eval_state.rs  hand_description.rs  hand_evaluation.rs  hand_scale.rs  hand_value.rs  high_hand.rs  mod.rs  pai_gow.rs  reference_evaluators.rs  stripped.rs
rust/src/poker/games/: ace_to_five.rs  ace_to_five_tables.rs  ace_to_six.rs  action_razz.rs  badugi.rs  badugi_tables.rs  deuce_to_seven.rs  high_hand.rs  high_tables.rs  mod.rs  pai_gow.rs  stripped_deck.rs  stripped_deck_tables.rs
rust/src/poker/tables/: ace_to_five_tables.rs  badugi_tables.rs  deuce_to_seven_tables.rs  high_tables.rs  mod.rs
rust/tests/: deck_type_test.rs  hash_test.rs  master_deck_test.rs  poker_eval_test.rs  stack_test.rs
(+1165 files in other folders)
