[package]
name = "onejoker"
version = "0.1.0"
authors = ["Lee Daniel Crocker <lee@onejoker.com>"]
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
strip = false
panic = "unwind"
split-debuginfo = "unpacked"

[dependencies]
cfg-if = "1.0.0"
json5 = "0.4.1"
paste = "1.0.15"
serde = { version = "1.0.214", features = ["derive"] }
static_assertions = "1.1.0"

[[bin]]
name = "bt"
path = "src/bin/bt.rs"
doc = false

[[bin]]
name = "btl"
path = "src/bin/btl.rs"
doc = false

[features]
default = []
high-hand-tables = []
ace-to-five-tables = []
deuce-to-seven-tables = []
ace-to-six-tables = []
badugi-tables = []

