[package]
name = "onejoker"
version = "0.1.0"
authors = [ "Lee Daniel Crocker <lee@onejoker.com>" ]
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
strip = false
panic = "unwind"
split-debuginfo = "unpacked"

[dependencies]
flate2 = { version = "1.0.35", optional = true }
serde = { version = "1.0.214", features = ["derive"], optional = true }
serde_json5 = "0.1.0"
home = "0.5.9"
lazy_static = "1.5.0"
paste = "1.0.15"
static_assertions = "1.1.0"

[[bin]]
name = "btl"
path = "src/bin/btl.rs"
doc = false

[features]
default = ["serde","high-hand-tables"]
flate2 = ["dep:flate2"]
serde = ["dep:serde"]
high-hand-tables = ["flate2"]
stripped-deck-tables = ["flate2"]
ace-to-five-tables = ["flate2"]
deuce-to-seven-tables = ["flate2"]
ace-to-six-tables = ["flate2"]
badugi-tables = ["flate2"]

